# contexta-core

./: .gitignore  Cargo.toml  README.md  RELEASE.md  pyproject.toml
.github/: BRANCH_PROTECTION.md
.github/workflows/: ci.yml  release.yml  test.yml
python/contexta_core/: __init__.py  _core.pyi  config.py  result.py
python/tests/: __init__.py  test_analysis.py  test_api.py
rust-core/benches/: baseline.json  parsing.rs
rust-core/crates/analyzer-core/: Cargo.toml
rust-core/crates/analyzer-core/src/: indexer.rs  lib.rs  query.rs  storage.rs
rust-core/crates/analyzer-python/: Cargo.toml
rust-core/crates/analyzer-python/src/: lib.rs  parser.rs
rust-core/crates/analyzer-rust/: Cargo.toml
rust-core/crates/analyzer-rust/src/: lib.rs
rust-core/crates/analyzer-typescript/src/: parser.rs
rust-core/crates/python-bindings/: Cargo.toml
rust-core/crates/python-bindings/src/: bridge.rs  lib.rs
src/: Cargo.toml
src/crates/analyzer-core/: Cargo.toml
src/crates/analyzer-core/benches/: parsing.rs
src/crates/analyzer-core/src/: incremental.rs  lib.rs  storage.rs
src/crates/analyzer-core/src/analysis/: deep.rs
src/crates/analyzer-python/src/: lib.rs  symbol_extract.rs
src/crates/analyzer-rust/src/: lib.rs  parser.rs  symbol_extract.rs
src/crates/analyzer-typescript/: Cargo.toml
src/crates/analyzer-typescript/src/: lib.rs  symbol_extract.rs
src/crates/python-bindings/: Cargo.toml
src/crates/python-bindings/src/: bridge.rs  lib.rs
