[package]
name = "contexta-python-bindings"
version = "0.1.0"
edition = "2021"

[lib]
name = "contexta_bindings"
crate-type = ["cdylib"]

[dependencies]
analyzer-core = { path = "../analyzer-core" }
pyo3 = { version = "0.27", features = ["extension-module", "anyhow"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
