[package]
name = "analyzer-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
deep-mode = []  # Enterprise feature: enables advanced analysis capabilities

[dependencies]
# Tree-sitter
tree-sitter.workspace = true

# Async runtime
tokio.workspace = true

# Parallelism
rayon.workspace = true

# Storage
rusqlite.workspace = true

# File watching
notify.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.13"
criterion = "0.5"
analyzer-python = { path = "../analyzer-python" }
analyzer-typescript = { path = "../analyzer-typescript" }
analyzer-rust = { path = "../analyzer-rust" }

[[bench]]
name = "parsing"
harness = false
